
INCLUDE_DIRECTORIES( ${CodingInterview_SOURCE_DIR}/code/)
SET(PROJECT_NAME "chapter2")

#local files
FILE (GLOB SOURCES *.h *.cpp)
SOURCE_GROUP("application" FILES ${SOURCES})

ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${CodingInterview_SOURCE_DIR}/bin)